@@ -8,6 +8,8 @@
       generous donation which made this behavior possible)
     * IMPORTANT: ctrl-x/a never take possible negative URLs into account, it was just
       too unpredictable
+    * new 'urlseparator' option for specifying the regexp used to split the arg to
+      :open, :tabopen and :winopen
     * :set editor now accepts quoting/escaping to use an editor with spaces in the path
     * support for :%foo as a count for commands (not yet widely used)
     * show informative message when a background tab was loaded, especially useful
